--- a/snippets/plp-card.liquid
+++ b/snippets/plp-card.liquid
@@ -5,7 +5,7 @@
 
     <div class="card-caption">
       <div>
-        <p class="card-headline m">{{ product.title }}</p>
+        <p class="headline m">{{ product.title }}</p>
         <p class="card-subtitle xs">
           {%- if product.metafields.custom_fields.subtitle -%}
           {{ product.metafields.custom_fields.subtitle }}
