--- a/assets/base.css
+++ b/assets/base.css
@@ -31,6 +31,8 @@ html {
   --mono: monospace;
   
   --main-color: #018136;
+  --accent-color: #069648;
+
 
   --bg: #F4F4F4;
   --bg-variant: #FFFFF8;
@@ -41,6 +43,11 @@ html {
   --font-size-m: 150%;
   --font-size-l: 300%;
   --font-size-xl: 500%;
+
+  --spacing-s: 2rem;
+  --spacing-m: 5rem;
+
+  --simple-border: 1px solid var(--main-color);
 
 }
 
@@ -60,7 +67,6 @@ html {
   font-size: var(--font-size-xl);
 }
 
-
 body {
   display: grid;
   grid-template-rows: auto auto 1fr auto;
@@ -69,7 +75,7 @@ body {
   margin: 0;
   font-size: 1.5rem;
   letter-spacing: 0.06rem;
-  line-height: 1.8;
+  line-height: 1.25;
   font-family: var(--mono);
   color: var(--main-color);
   background-color: var(--base-color);
@@ -85,7 +91,10 @@ a {
   color: unset;
   text-decoration: none;
 }
-
+fieldset {
+  display: flex;
+  border: none;
+}
 .unstyled-list {
   list-style-type: none;
   margin: 0;
@@ -97,13 +106,37 @@ a {
   flex-wrap: wrap;
 }
 
+.primary-btn {
+  color: var(--base-color);
+  background-color: var(--accent-color);
+  border: 1px solid var(--main-color);
+  text-align: center;
+  border-radius: 10px;
+  font-family: var(--mono);
+  font-size: var(--font-size-s);
+  padding: 0.5rem;
+  width: 15rem;
+  margin: var(--spacing-s);
+}
+.secondary-btn {
+  border: 1px solid var(--main-color);
+  color: var(--main-color);
+  background-color:var(--base-color);
+  text-align: center;
+  border-radius: 10px;
+  font-family: var(--mono);
+}
+
 /* Cards on PLP and CLP */
+.card-wrapper {
+  width: calc((100vw / 3) - 1rem);
+  display: block;
+  padding: 1rem;
+}
 .card {
   display: flex;
   flex-direction: column;
-  margin: 2rem;
-  padding: 1rem;
-  width: calc((100vw / 3) - 2rem);
+  flex-grow: 0;
 }
 
 .card-image-wrapper {
@@ -120,6 +153,9 @@ a {
   height: 18em;
 }
 
+.centered {
+  text-align: center;
+}
 .headline {
   font-family: var(--serif);
   font-style: italic;
@@ -127,6 +163,7 @@ a {
   margin: 0;
 }
 
+/* Sticky header */
 #shopify-section-header {
   z-index: 3;
   will-change: transform;
@@ -143,4 +180,11 @@ a {
 
 #shopify-section-header.animate {
   transition: transform 0.15s ease-out;
+}
+
+.price {
+  font-family: var(--serif);
+  font-size: var(--font-size-m);
+  font-style: italic;
+  font-weight: bold;
 }
