--- a/sections/blog-list.liquid
+++ b/sections/blog-list.liquid
@@ -1,7 +1,7 @@
 <div class="blog-articles">
   {%- for article in blog.articles -%}
     <div class="blog-articles__article article">
-      {{ article.title }}
+      {% render 'blog-card' article: article %}
     </div>
   {%- endfor -%}
 </div>
