--- a/sections/form-landing.liquid
+++ b/sections/form-landing.liquid
@@ -7,14 +7,14 @@
     <a>Request a <br /><span>curated</span><br />collection</a>
   </div>
 
-
-
 </section>
-  <div class="sp-form-landing-instructions">
-    <img src="https://cdn.shopify.com/s/files/1/0583/3202/0894/files/paperclip.svg?v=1627568636" alt="paperclip">
-    <p>Hi! Thanks for trusting Sweet Pickle Books to help find what you're looking for. After you fill out this request, we will contact you directly with details before the order is completed. We'll do our best to get this to you asap. Thanks for your patience! Let the hunt begin!</p>
-    <img src="https://cdn.shopify.com/s/files/1/0583/3202/0894/files/paperclip.svg?v=1627568636" alt="paperclip">
-  </div>
+
+<div class="sp-form-landing-instructions">
+  <img src="https://cdn.shopify.com/s/files/1/0583/3202/0894/files/paperclip.svg?v=1627568636" alt="paperclip">
+  <p>Hi! Thanks for trusting Sweet Pickle Books to help find what you're looking for. After you fill out this request, we will contact you directly with details before the order is completed. We'll do our best to get this to you asap. Thanks for your patience! Let the hunt begin!</p>
+  <img src="https://cdn.shopify.com/s/files/1/0583/3202/0894/files/paperclip.svg?v=1627568636" alt="paperclip">
+</div>
+
 <nav class="sp-form-nav">
   <a>Book Request Form</a>
   <a>Curated Collection Form</a>
@@ -65,12 +65,13 @@
 
   .sp-form-nav {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
   }
   .sp-form-nav a {
     background-color: var(--main-color);
     color: var(--base-color);
     padding: .5rem 3rem;
+    margin: 2rem;
     border-radius: 10px;
     font-family: var(--mono);
   }
