--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -1,5 +1,9 @@
-
 <script src="{{ 'cart-notification.js' | asset_url }}" defer="defer"></script>
+<svg xmlns="http://www.w3.org/2000/svg" class="hidden">
+  <symbol id="icon-search" viewbox="0 0 18 19" fill="none">
+    <path fill-rule="evenodd" clip-rule="evenodd" d="M11.03 11.68A5.784 5.784 0 112.85 3.5a5.784 5.784 0 018.18 8.18zm.26 1.12a6.78 6.78 0 11.72-.7l5.4 5.4a.5.5 0 11-.71.7l-5.41-5.4z" fill="currentColor"/>
+  </symbol>
+</svg>
 
 <{% if section.settings.enable_sticky_header %}sticky-header{% else %}div{% endif %} class="header-wrapper{% if section.settings.show_line_separator %} header-wrapper--border-bottom{% endif %}">
 <header class="sp-header">
@@ -198,7 +202,7 @@
     height: 100%;
     border: none;
     color: var(--main-color);
-    background-color: none;
+    background-color: var(--base-color);
     border-radius: 10px;
     padding-left: 10px;
   }
@@ -206,13 +210,12 @@
     width: 20%;
     height: 100%;
     border: none;
-    background-color: none;
-    background: none;
+    background-color: var(--base-color);
     border-radius: 10px;
   }
   .sp-header-search .field svg {
     width: 25px;
-    height: 100%;
+    height: 25px;
     color: var(--main-color);
   }
 </style>
