--- a/sections/main-cart-footer.liquid
+++ b/sections/main-cart-footer.liquid
@@ -3,28 +3,15 @@
 {{ 'component-price.css' | asset_url | stylesheet_tag }}
 {{ 'component-discounts.css' | asset_url | stylesheet_tag }} -->
 
-<div class="page-width{% if cart == empty %} is-empty{% endif %}" id="main-cart-footer" data-id="{{ section.id }}">
-  <div>
+<div id="main-cart-footer" data-id="{{ section.id }}">
     <div class="cart__footer">
-      {%- if section.settings.show_cart_note -%}
-        <cart-note class="cart__note field">
-          <label for="Cart-note">{{ 'sections.cart.note' | t }}</label>
-          <textarea class="text-area text-area--resize-vertical field__input" name="note" id="Cart-note" placeholder="{{ 'sections.cart.note' | t }}">{{ cart.note }}</textarea>
-        </cart-note>
-      {%- endif -%}
-
-      <div class="cart__blocks">
-        {% for block in section.blocks %}
-          {%- case block.type -%}
-            {%- when '@app' -%}
-              {% render block %}
-            {%- when 'subtotal' -%}
               <div class="js-contents" {{ block.shopify_attributes }}>
                 <div class="totals">
-                  <p class="totals__subtotal-value">{{ cart.total_price | money_with_currency }}</p>
+                  <p>Total: {{cart.item_count}} Items</p>
+                  <p class="totals__subtotal-value price">{{ cart.total_price | money_without_trailing_zeros }}</p>
                 </div>
                 <div>
-                  {%- if cart.cart_level_discount_applications.size > 0 -%}
+                  <!-- {%- if cart.cart_level_discount_applications.size > 0 -%}
                     <ul class="discounts list-unstyled" role="list" aria-label="{{ 'customer.order.discount' | t }}">
                       {%- for discount in cart.cart_level_discount_applications -%}
                         <li class="discounts__discount discounts__discount--end">
@@ -34,10 +21,10 @@
                         </li>
                       {%- endfor -%}
                     </ul>
-                  {%- endif -%}
+                  {%- endif -%} -->
                 </div>
 
-                <small class="tax-note caption-large rte">
+                <!-- <small class="tax-note caption-large rte">
                   {%- if cart.taxes_included and shop.shipping_policy.body != blank -%}
                     {{ 'sections.cart.taxes_included_and_shipping_policy_html' | t: link: shop.shipping_policy.url }}
                   {%- elsif cart.taxes_included -%}
@@ -47,34 +34,36 @@
                   {%- else -%}
                     {{ 'sections.cart.taxes_and_shipping_at_checkout' | t }}
                   {%- endif -%}
-                </small>
+                </small> -->
               </div>
-            {%- else -%}
               <div class="cart__ctas" {{ block.shopify_attributes }}>
-                <noscript>
+                <!-- <noscript>
                   <button type="submit" class="cart__update-button button button--secondary" form="cart">
                     {{ 'sections.cart.update' | t }}
                   </button>
-                </noscript>
+                </noscript> -->
 
-                <button type="submit" class="cart__checkout-button button" name="checkout"{% if cart == empty %} disabled{% endif %} form="cart">
-                  {{ 'sections.cart.checkout' | t }}
+                <button type="submit" class="secondary-btn l cart__checkout-button button" name="checkout"{% if cart == empty %} disabled{% endif %} form="cart">
+                  Checkout
                 </button>
               </div>
 
-              {%- if additional_checkout_buttons -%}
+              <!-- {%- if additional_checkout_buttons -%}
                 <div class="cart__dynamic-checkout-buttons additional-checkout-buttons">
                   {{ content_for_additional_checkout_buttons }}
                 </div>
-              {%- endif -%}
-          {%- endcase -%}
-        {% endfor %}
-
+              {%- endif -%} -->
         <div id="cart-errors"></div>
-      </div>
     </div>
-  </div>
 </div>
+<style>
+  .cart__footer {
+    border-top: var(--simple-border);
+    display: flex;
+    justify-content: space-between;
+  }
+
+</style>
 
 {% javascript %}
   class CartNote extends HTMLElement {
