--- a/sections/main-cart-items.liquid
+++ b/sections/main-cart-items.liquid
@@ -1,43 +1,28 @@
-<!-- {{ 'component-cart.css' | asset_url | stylesheet_tag }}
-{{ 'component-cart-items.css' | asset_url | stylesheet_tag }}
-{{ 'component-totals.css' | asset_url | stylesheet_tag }}
-{{ 'component-price.css' | asset_url | stylesheet_tag }}
-{{ 'component-discounts.css' | asset_url | stylesheet_tag }}
-{{ 'component-loading-overlay.css' | asset_url | stylesheet_tag }} -->
-
 <script src="{{ 'cart.js' | asset_url }}" defer="defer"></script>
 
-<cart-items class="page-width{% if cart == empty %} is-empty{% endif %}">
-  <div class="title-wrapper-with-link">
-    <h1 class="title title--primary">{{ 'sections.cart.title' | t }}</h1>
-    <a href="{{ routes.all_products_collection_url }}" class="underlined-link">{{ 'general.continue_shopping' | t }}</a>
-  </div>
+<cart-items>
 
-  <div class="cart__warnings">
-    <h2 class="cart__empty-text">{{ 'sections.cart.empty' | t }}</h2>
-    <a href="{{ routes.all_products_collection_url }}" class="link">
-      {{ 'general.continue_shopping' | t }}
-    </a>
-  </div>
+  <header class="cart-header">
+    <h1 class="cart-h1">Cart</h1>
+    <a href="{{ routes.all_products_collection_url }}">(Close)</a>
+  </header>
+
+  {%- if cart == empty -%}
+    <div class="empty-cart-text">
+      <h2 class="blocky xl">Your cart is <br /><span class="headline">empty</span></h2>
+      <p class="blocky m">Would you like to add <a class="headline" href="{{ routes.all_products_collection_url }}" class="link">something?</a></p>
+    </div>
+  {%- endif -%}
 
   <form action="{{ routes.cart_url }}" class="cart__contents critical-hidden" method="post" id="cart">
     <div class="cart__items" id="main-cart-items" data-id="{{ section.id }}">
       <div class="js-contents">
         {%- if cart != empty -%}
-          <table class="cart-items">
-            <thead>
-              <tr>
-                <th class="caption-with-letter-spacing" colspan="2" scope="col">{{ 'sections.cart.headings.product' | t }}</th>
-                <th class="right caption-with-letter-spacing" colspan="1" scope="col">{{ 'sections.cart.headings.price' | t }}</th>
-                <th class="cart-items__heading--wide medium-up caption-with-letter-spacing" colspan="1" scope="col">{{ 'sections.cart.headings.quantity' | t }}</th>
-                <th class="medium-up right caption-with-letter-spacing" colspan="1" scope="col">{{ 'sections.cart.headings.total' | t }}</th>
-              </tr>
-            </thead>
-
-            <tbody>
+          <div class="cart-items">
               {%- for item in cart.items -%}
-                <tr class="cart-item" id="CartItem-{{ item.index | plus: 1 }}">
-                  <td class="cart-item__media">
+                <div class="cart-item" id="CartItem-{{ item.index | plus: 1 }}">
+
+                  <div class="cart-item__media">
                     {% if item.image %}
                       <img class="cart-item__image"
                         src="{{ item.image | img_url: '150x' }}"
@@ -47,16 +32,11 @@
                         height="{{ 75 | divided_by: item.image.aspect_ratio | ceil }}"
                       >
                     {% endif %}
-                  </td>
+                  </div>
 
-                  <td class="cart-item__details">
-                    {%- if section.settings.show_vendor -%}
-                      <p class="caption-with-letter-spacing light">{{ item.product.vendor }}</p>
-                    {%- endif -%}
-
-                    <a href="{{ item.product.url }}" class="cart-item__name break">{{ item.product.title | escape }}</a>
-
-                    {%- if item.product.has_only_default_variant == false or item.properties.size != 0 or item.selling_plan_allocation != nil -%}
+                  <div class="cart-item__details">
+                    <a href="{{ item.product.url }}" class="headline l cart-item__name break">{{ item.product.title | escape }}</a>
+                    <!-- {%- if item.product.has_only_default_variant == false or item.properties.size != 0 or item.selling_plan_allocation != nil -%}
                       <dl>
                         {%- if item.product.has_only_default_variant == false -%}
                           {%- for option in item.options_with_values -%}
@@ -87,29 +67,19 @@
                       </dl>
 
                       <p class="product-option">{{ item.selling_plan_allocation.selling_plan.name }}</p>
-                    {%- endif -%}
+                    {%- endif -%} -->
 
-                    <ul class="discounts list-unstyled" role="list" aria-label="{{ 'customer.order.discount' | t }}">
+                    <!-- <ul class="discounts list-unstyled" role="list" aria-label="{{ 'customer.order.discount' | t }}">
                       {%- for discount in item.discounts -%}
                         <li class="discounts__discount">
                           {%- render 'icon-discount' -%}
                           {{ discount.title }}
                         </li>
                       {%- endfor -%}
-                    </ul>
+                    </ul> -->
+                  </div>
 
-                    <!-- <p class="cart-item__error" id="Line-item-error-{{ item.index | plus: 1 }}">
-                      <span class="cart-item__error-text"></span>
-                      <svg aria-hidden="true" focusable="false" role="presentation" class="icon icon-error" viewBox="0 0 13 13">
-                        <circle cx="6.5" cy="6.50049" r="5.5" stroke="white" stroke-width="2"/>
-                        <circle cx="6.5" cy="6.5" r="5.5" fill="#EB001B" stroke="#EB001B" stroke-width="0.7"/>
-                        <path d="M5.87413 3.52832L5.97439 7.57216H7.02713L7.12739 3.52832H5.87413ZM6.50076 9.66091C6.88091 9.66091 7.18169 9.37267 7.18169 9.00504C7.18169 8.63742 6.88091 8.34917 6.50076 8.34917C6.12061 8.34917 5.81982 8.63742 5.81982 9.00504C5.81982 9.37267 6.12061 9.66091 6.50076 9.66091Z" fill="white"/>
-                        <path d="M5.87413 3.17832H5.51535L5.52424 3.537L5.6245 7.58083L5.63296 7.92216H5.97439H7.02713H7.36856L7.37702 7.58083L7.47728 3.537L7.48617 3.17832H7.12739H5.87413ZM6.50076 10.0109C7.06121 10.0109 7.5317 9.57872 7.5317 9.00504C7.5317 8.43137 7.06121 7.99918 6.50076 7.99918C5.94031 7.99918 5.46982 8.43137 5.46982 9.00504C5.46982 9.57872 5.94031 10.0109 6.50076 10.0109Z" fill="white" stroke="#EB001B" stroke-width="0.7">
-                      </svg>
-                    </p> -->
-                  </td>
-
-                  <td class="cart-item__prices right">
+                  <!-- <td class="cart-item__prices right">
                     <div class="cart-item__price-wrapper">
                       {%- if item.original_price != item.final_price -%}
                         <dl class="cart-item__discounted-prices">
@@ -147,41 +117,16 @@
                         </span>
                       {%- endif -%}
                     </div>
-                  </td>
-
-                  <td class="cart-item__quantity">
-                    <label class="medium-down" for="Quantity-{{ item.index | plus: 1 }}">
-                      {{ 'products.product.quantity.label' | t }}
-                    </label>
-                    <quantity-input class="quantity">
-                      <button class="quantity__button no-js-hidden" name="minus" type="button">
-                        <span class="visually-hidden">{{ 'products.product.quantity.decrease' | t: product: item.product.title | escape }}</span>
-                        <!-- {% render 'icon-minus' %} -->-
-                      </button>
-                      <input class="quantity__input"
-                        type="number"
-                        name="updates[]"
-                        value="{{ item.quantity }}"
-                        min="0"
-                        aria-label="{{ 'products.product.quantity.input_label' | t: product: item.product.title | escape }}"
-                        id="Quantity-{{ item.index | plus: 1 }}"
-                        data-index="{{ item.index | plus: 1 }}"
-                      >
-                      <button class="quantity__button no-js-hidden" name="plus" type="button">
-                        <span class="visually-hidden">{{ 'products.product.quantity.increase' | t: product: item.product.title | escape }}</span>
-                        <!-- {% render 'icon-plus' %} -->+
-                      </button>
-                    </quantity-input>
-                  </td>
-
-                  <td class="cart-item__totals right">
-                    <div class="loading-overlay hidden">
+                  </td> -->
+<div class="item-controls">
+                  <div class="cart-item__totals right">
+                    <!-- <div class="loading-overlay hidden">
                       <div class="loading-overlay__spinner">
                         <svg aria-hidden="true" focusable="false" role="presentation" class="spinner" viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg">
                           <circle class="path" fill="none" stroke-width="6" cx="33" cy="33" r="30"></circle>
                         </svg>
                       </div>
-                    </div>
+                    </div> -->
 
                     <div class="cart-item__price-wrapper medium-up">
                       {%- if item.original_line_price != item.final_line_price -%}
@@ -199,17 +144,41 @@
                         </span>
                       {%- endif -%}
                     </div>
+                    <div class="cart-item__quantity">
+                      <label class="medium-down" for="Quantity-{{ item.index | plus: 1 }}">
+                        {{ 'products.product.quantity.label' | t }}
+                      </label>
+                      <quantity-input class="quantity">
+                        <button class="quantity__button no-js-hidden" name="minus" type="button">
+                          <span class="visually-hidden">{{ 'products.product.quantity.decrease' | t: product: item.product.title | escape }}</span>
+                          -
+                        </button>
+                        <input class="quantity__input"
+                          type="number"
+                          name="updates[]"
+                          value="{{ item.quantity }}"
+                          min="0"
+                          aria-label="{{ 'products.product.quantity.input_label' | t: product: item.product.title | escape }}"
+                          id="Quantity-{{ item.index | plus: 1 }}"
+                          data-index="{{ item.index | plus: 1 }}"
+                        >
+                        <button class="quantity__button no-js-hidden" name="plus" type="button">
+                          <span class="visually-hidden">{{ 'products.product.quantity.increase' | t: product: item.product.title | escape }}</span>
+                          +
+                        </button>
+                      </quantity-input>
+                    </div>
 
                     <cart-remove-button id="Remove-{{ item.index | plus: 1 }}" data-index="{{ item.index | plus: 1 }}">
-                      <a href="{{ item.url_to_remove }}" class="button button--tertiary" aria-label="{{ 'sections.cart.remove_title' | t: title: item.title }}">
-                        <!-- {% render 'icon-remove' %} -->Remove
+                      <a href="{{ item.url_to_remove }}" class="secondary-btn button" aria-label="{{ 'sections.cart.remove_title' | t: title: item.title }}">
+                        Remove
                       </a>
                     </cart-remove-button>
-                  </td>
-                </tr>
+                  </div>
+                </div>
+                </div>
               {%- endfor -%}
-            </tbody>
-          </table>
+              </div>
         {%- endif -%}
       </div>
     </div>
@@ -218,17 +187,43 @@
     <p class="visually-hidden" id="shopping-cart-line-item-status" aria-live="polite" aria-hidden="true" role="status">{{ 'accessibility.loading' | t }}</p>
   </form>
 </cart-items>
+<style>
+  .cart-header {
+    border-bottom: var(--simple-border);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-left: var(--spacing-m);
+    padding-right: var(--spacing-m);
+  }
+  .cart-h1 {
+    border-bottom: var(--simple-border);
+    font-family: var(--serif);
+  }
+  .empty-cart-text {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 66vh;
+  }
+  .empty-cart-text a {
+    border-bottom: var(--simple-border);
+  }
+  .cart-item {
+    display: flex;
+    margin:var(--spacing-m);
+  }
+  .cart-item__media {
+    background-color: var(--bg);
+    width: 15rem;
+    border-radius: 10px;
+    padding: 2rem;
+  }
+  .item-controls {
+    margin-left: auto;
+    text-align: right;
+  }
 
-{% schema %}
-{
-  "name": "t:sections.main-cart-items.name",
-  "settings": [
-    {
-      "type": "checkbox",
-      "id": "show_vendor",
-      "default": false,
-      "label": "t:sections.main-cart-items.settings.show_vendor.label"
-    }
-  ]
-}
-{% endschema %}
+</style>
